force-app/main/default/objects/Integration_Error__c/Integration_Error__c.object-meta.xml
<CustomObject>
    <description>Object to capture all integration errors.  This will link to the specific record that the error occurs on.</description>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>IERID{000000}</displayFormat>
        <label>IER-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>