force-app/main/default/objects/Integration_Error__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account that this issue is linked to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Integration_Error_Records</relationshipName>
    <type>Lookup</type>
</CustomField>