force-app/main/default/objects/Integration_Error__c/fields/Account_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Integration_Status__c</fullName>
    <formula>TEXT(Account__r.AccPac_Integration_Status__c)</formula>
    <inlineHelpText>Integration Status from the Account.</inlineHelpText>
    <label>Account Integration Status</label>
    <type>Text</type>
</CustomField>