force-app/main/default/objects/Integration_Error__c/fields/Data_Attributes_For_Update__c.field-meta.xml
<CustomField>
    <fullName>Data_Attributes_For_Update__c</fullName>
    <inlineHelpText>Data that is being using to update into salesforce.</inlineHelpText>
    <label>Data Attributes For Update</label>
    <length>20768</length>
    <type>LongTextArea</type>
</CustomField>