force-app/main/default/objects/Integration_Error__c/fields/Error_Field__c.field-meta.xml
<CustomField>
    <fullName>Error_Field__c</fullName>
    <label>Error Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>