force-app/main/default/objects/Integration_Error__c/fields/Fix_Status__c.field-meta.xml
<CustomField>
    <fullName>Fix_Status__c</fullName>
    <inlineHelpText>Have we fixed the issue with the error?</inlineHelpText>
    <label>Fix Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Error Fixed</fullName>
            </value>
            <value>
                <fullName>Does Not Apply</fullName>
            </value>
            <value>
                <fullName>Escalate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>