force-app/main/default/objects/Integration_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Error_Field__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Status__c</columns>
    <columns>Fix_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>