force-app/main/default/objects/Integration_Error__c/listViews/Copy_of_Outstanding_Errors.listView-meta.xml
<ListView>
    <fullName>Copy_of_Outstanding_Errors</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccPac_Account__c</columns>
    <columns>Fix_Status__c</columns>
    <columns>Account_Integration_Status__c</columns>
    <columns>Error_Field__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Data_Attributes_For_Update__c</columns>
    <columns>Error_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fix_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Account_Integration_Status__c</field>
        <operation>notEqual</operation>
        <value>Do Not Integrate</value>
    </filters>
    <label>Outstanding Errors - Dora Fixes</label>
</ListView>