force-app/main/default/objects/Integration_Error__c/listViews/Pending_Integration_Errors.listView-meta.xml
<ListView>
    <fullName>Pending_Integration_Errors</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>AccPac_Account__c</columns>
    <columns>Error_Field__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Fix_Status__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fix_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Account_Integration_Status__c</field>
        <operation>notEqual</operation>
        <value>Do not Integrate</value>
    </filters>
    <label>Pending Integration Errors</label>
</ListView>